--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "web3": "^1.0.0-beta.24"
   },
   "scripts": {
     "start": "react-scripts start",
