--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ethjs": "^0.3.0",
+    "ethjs-contract": "^0.1.9",
+    "ethjs-query": "^0.3.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "uuid": "^3.1.0",
-    "web3": "^1.0.0-beta.24"
+    "web3": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
