--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "skel": "0.0.0",
     "uuid": "^3.1.0",
     "web3": "^0.19.0"
   },
