--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ethjs": "^0.3.0",
     "ethjs-contract": "^0.1.9",
     "ethjs-query": "^0.3.1",
+    "ipfs": "^0.26.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "skel": "0.0.0",
     "uuid": "^3.1.0",
     "web3": "^0.19.0"
   },
