--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "stream-to-string": "^1.1.0",
+    "truffle-contract": "^3.0.1",
     "uuid": "^3.1.0",
     "web3": "^0.19.0"
   },
@@ -22,5 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "truffle": "^4.0.4"
   }
 }
